[package]
name = "my-algorithm-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0", features = ["cookies", "json"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
json = "0"
faer = "0"
ron = "0"

[dev-dependencies]
test-case = "3"
quickcheck = "1"
criterion = "0"

[[bench]]
name = "leetcode"
harness = false

[[bench]]
name = "classic"
harness = false
