SUBDIRS = test_helper \
	  leetcode \
	  binary_tree

TESTS = \
    leetcode/two_sum_brute_0_test \
    leetcode/two_sum_brute_1_test \
    leetcode/two_sum_brute_2_test \
    leetcode/two_sum_brute_3_test \
    leetcode/two_sum_hashmap_0_test \
    leetcode/two_sum_hashmap_1_test \
    leetcode/two_sum_hashmap_2_test \
    leetcode/two_sum_hashmap_3_test \
    leetcode/add_two_numbers_0_test \
    leetcode/add_two_numbers_1_test \
    leetcode/leetcode_2962_0_test \
    leetcode/leetcode_2962_1_test \
    leetcode/leetcode_2962_2_test \
    binary_tree/binary_tree_test \
    binary_tree/binary_tree_remove_test
