AM_CFLAGS = -I$(top_srcdir)/test_helper
check_PROGRAMS = two_sum_brute_0_test \
		 two_sum_brute_1_test \
		 two_sum_brute_2_test \
		 two_sum_brute_3_test \
		 two_sum_hashmap_0_test \
		 two_sum_hashmap_1_test \
		 two_sum_hashmap_2_test \
		 two_sum_hashmap_3_test \
		 add_two_numbers_0_test \
		 add_two_numbers_1_test
TESTS = $(check_PROGRAMS)
two_sum_brute_0_test_SOURCES = two_sum_brute.c two_sum_brute_0_test.c
two_sum_brute_1_test_SOURCES = two_sum_brute.c two_sum_brute_1_test.c
two_sum_brute_2_test_SOURCES = two_sum_brute.c two_sum_brute_2_test.c
two_sum_brute_3_test_SOURCES = two_sum_brute.c two_sum_brute_3_test.c
two_sum_hashmap_0_test_SOURCES = two_sum_hashmap.c two_sum_brute_0_test.c
two_sum_hashmap_1_test_SOURCES = two_sum_hashmap.c two_sum_brute_1_test.c
two_sum_hashmap_2_test_SOURCES = two_sum_hashmap.c two_sum_brute_2_test.c
two_sum_hashmap_3_test_SOURCES = two_sum_hashmap.c two_sum_brute_3_test.c
add_two_numbers_0_test_SOURCES = list_node.h list_util.h list_util.c add_two_numbers_0_test.c
add_two_numbers_1_test_SOURCES = list_node.h list_util.h list_util.c add_two_numbers_1_test.c

two_sum_brute_0_test_LDADD = ../test_helper/libtesthelper.a
two_sum_brute_1_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_brute_2_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_brute_3_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_hashmap_0_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_hashmap_1_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_hashmap_2_test_LDADD = ../test_helper/libtesthelper.a 
two_sum_hashmap_3_test_LDADD = ../test_helper/libtesthelper.a 
add_two_numbers_0_test_LDADD = ../test_helper/libtesthelper.a 
add_two_numbers_1_test_LDADD = ../test_helper/libtesthelper.a 
